# SHAP-Personal-Project

./: .gitignore  README.md  pyproject.toml  ruff.toml  run_experiment.py
notebooks/: exploratory_analysis.ipynb
src/: config.py
src/data/: load_data.py  preprocess.py
src/explainability/: compute_shap.py  shap_analysis.py
src/models/: evaluate_models.py  train_models.py
src/robustness/: perturbations.py  stability_metrics.py
src/visualization/: plots.py
