[project]
name = "shap-robustness"
version = "0.1.0"
description = "On the Robustness of SHAP Explanations in Black-Box Machine Learning Models"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Louis Peretie" }]

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "shap>=0.43",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pre-commit>=3.5",
    "jupyter>=1.0",
    "ipykernel>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # simplify
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
